CNX-1585 Fix table header overlap with datepicker

--- a/src/components/search_section/search_section.module.css
+++ b/src/components/search_section/search_section.module.css
@@ -2,7 +2,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 56px;
-  z-index: 1;
+  z-index: 5;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
